# its-raining-man

./: Cargo.toml  README.md  deploy
src/: bot_flow.rs  domain.rs  kinda_db.rs  main.rs  state_manager.rs
