[package]
name = "its-raining-man"
version = "0.1.0"
edition = "2021"
authors = ["brzzbr"]

[[bin]]
name = "its-raining-man-runner"
path = "src/main.rs"

[package.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "ghcr.io/cross-rs/armv7-unknown-linux-musleabihf:0.2.4"
xargo = false

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
openssl = { version = "*", features = ["vendored"] }
config = "0.13.3"
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
rand = "0.8.5"
url = "2.3.1"
fantoccini = "0.20.0-rc.4"
serde_json = "1.0.96"